legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr83965-2.c-4.8.2-0.out.txt
pr83965-2.c: In function ‘e’:
pr83965-2.c:9:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int a; a; a++)
   ^
pr83965-2.c:9:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr83965-2.c:11:7: error: ‘for’ loop initial declarations are only allowed in C99 mode
       for (int b = 0; b < 6; b++)
       ^
